# ai-test

./: README.md  deepQ.py  game_implementation.py  pyproject.toml  tacticians_dqn.pth
