[project]
name = "ai-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Clément Gambier",email = "78157383+clement-gambier2@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
